# AgriTrust-Contracts

./: Cargo.toml  FIX_ISSUE_16.md  FIX_ISSUE_17.md  FIX_ISSUE_2.md  FIX_ISSUE_6.md  README.md  package.json  pr_body.md
contracts/admin/: Cargo.toml  dead_mans_switch.rs  lib.rs
contracts/admin/src/: dead_mans_switch.rs  dead_mans_switch_test.rs  depth_tracker.rs  depth_tracker_test.rs  governance_activity_monitor.rs  governance_activity_monitor_test.rs  lib.rs
contracts/docs/specs/: optimistic-concurrency.md  vesting-cliff-slippage.md  zk-kyc-nullifier-jurisdiction.md
contracts/grant_contracts/: Cargo.toml
contracts/grant_stream/: Cargo.toml
contracts/grant_stream/src/: circuit_breakers.rs  donor_reputation.rs  governance.rs  lib.rs  matching_pool.rs  multi_threshold.rs  multi_token.rs  optimized.rs  precision.rs  scheduler.rs  security_council.rs  storage_keys.rs  storage_keys_test.rs  test.rs  test_clawback.rs  test_concurrent_withdraw.rs  test_dispute_circuit_breaker.rs  test_donor_reputation.rs  test_double_approval.rs  test_matching_pool.rs  test_reputation_matching_integration.rs  test_security_council.rs  test_sep38_claim_value.rs  test_sweeper.rs  yield_enhanced.rs  yield_treasury.rs
contracts/provenance/: Cargo.toml
contracts/provenance/src/: errors.rs  lib.rs  resolver.rs  test.rs  types.rs  verifier.rs
contracts/src/provenance/: authorization.rs
contracts/state/: Cargo.toml
contracts/state/src/: lib.rs  optimistic_mutator.rs  rollback.rs
contracts/treasury/: Cargo.toml
src/adapters/: onChainAdapter.js
src/services/: escrowRead.js
(+62 files in other folders)
