[package]
name = "provenance"
version = "0.1.0"
edition = "2021"
publish = false
description = "Storage-budget-aware provenance chain resolver for AgriTrust"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
